--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 #JPA properties
+logging.level.org.hibernate.SQL=debug
+
+spring.jpa.open-in-view=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
+
+#In a JPA-based app, you can choose to let Hibernate create the schema or use 1schema.sql,
+#but you cannot do both.
+#Make sure to disable spring.jpa.hibernate.ddl-auto if you use 1schema.sql.
+spring.jpa.hibernate.ddl-auto=create
 
 # Fix Postgres JPA Error:
 # Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
