αλληλούχα ! work @ManyToOne, @OneToMany

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #In a JPA-based app, you can choose to let Hibernate create the schema or use 1schema.sql,
 #but you cannot do both.
 #Make sure to disable spring.jpa.hibernate.ddl-auto if you use 1schema.sql.
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 
 # Fix Postgres JPA Error:
 # Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
