--- a/pom.xml
+++ b/pom.xml
@@ -67,11 +67,11 @@
             <artifactId>bootstrap</artifactId>
             <version>3.3.7-1</version>
         </dependency>
-<!--        <dependency>
+        <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>jquery</artifactId>
             <version>3.1.1</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
     <build>
