--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ logging.level.org.hibernate.SQL=debug
 spring.jpa.open-in-view=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 
 #In a JPA-based app, you can choose to let Hibernate create the schema or use 1schema.sql,
