--- a/src/main/resources/datasource-cfg.properties
+++ b/src/main/resources/datasource-cfg.properties
@@ -1,4 +1,10 @@
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=postgres
-spring.datasource.password=zxcvbnm
+#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=postgres
+#spring.datasource.password=zxcvbnm
+
+spring.datasource.url=jdbc:h2:~/test
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
