add correct REST service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #but you cannot do both.
 #Make sure to disable spring.jpa.hibernate.ddl-auto if you use 1schema.sql.
 spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=validate
 
 # Fix Postgres JPA Error:
 # Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
