--- a/src/main/resources/datasource-cfg.properties
+++ b/src/main/resources/datasource-cfg.properties
@@ -3,7 +3,8 @@
 #spring.datasource.username=postgres
 #spring.datasource.password=zxcvbnm
 
-spring.datasource.url=jdbc:h2:~/test
+#spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=jdbc:h2:tcp://localhost/~/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
