rewrite - use modificator "private" for @Repository ----> for use mock in future and other

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,20 +4,21 @@ logging.level.org.hibernate.SQL=debug
 spring.jpa.open-in-view=true
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
 
 #In a JPA-based app, you can choose to let Hibernate create the schema or use 1schema.sql,
 #but you cannot do both.
-#Make sure to disable spring.jpa.hibernate.ddl-auto if you use 1schema.sql.
+#Make sure to disable spring.jpa.hibernate.ddl-auto if you use schema.sql.
 spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=validate
+
 
 # Fix Postgres JPA Error:
 # Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 #Use paragraf 76.3 Customize the Jackson ObjectMapper
 #https://docs.spring.io/spring-boot/docs/current/reference/html/howto-spring-mvc.html#howto-customize-the-jackson-objectmapper
 spring.jackson.serialization.indent_output=true
+
