do not work /getCurrentTAndMinTwithForecast

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 #Make sure to disable spring.jpa.hibernate.ddl-auto if you use schema.sql.
 spring.jpa.hibernate.ddl-auto=create-drop
 
-
 # Fix Postgres JPA Error:
 # Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -22,4 +21,24 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #https://docs.spring.io/spring-boot/docs/current/reference/html/howto-spring-mvc.html#howto-customize-the-jackson-objectmapper
 spring.jackson.serialization.indent_output=true
 
+#LDAP PROPERTIES
+# urls: ldap://localhost:12345
+# base: dc=corporate,dc=ru
+#
+# username: uid=ivanov
+# password: 11111
+# in group: developers
+#
+# username: uid=petrov
+# password: 22222
+# in group: developers
+#
+# username: uid=berda
+# password: 12345
+# in group: managers
 
+spring.ldap.embedded.base-dn[0]=dc=springframework,dc=org
+spring.ldap.embedded.ldif=classpath:ldap-schema.ldif
+spring.ldap.embedded.port=12345
+#spring.ldap.embedded.validation.enabled=true
+spring.ldap.embedded.validation.enabled=false
